--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,6 +10,7 @@
     tools:context=".MainActivity">
 
     <Button
+        android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/file_picker"
@@ -18,19 +19,28 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:text="@string/decoded_label"
-        android:gravity="center_horizontal"
+        android:layout_below="@+id/myText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dip"/>
+        android:minHeight="400px"
+        android:maxHeight="600px"/>
+    <TextView
+        android:id="@+id/label"
+        android:text="@string/decoded_label"
+        android:layout_below="@id/button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:textStyle="bold"
+        android:textSize="8pt" />
     <TextView
         android:id="@+id/myText"
+        android:layout_below="@+id/label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="20dip"/>
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:textStyle="italic"/>
 
 
-</LinearLayout>
+</RelativeLayout>
