Aggiunto il caricamento dell'immagine tramite action bar, fatto il parse dell'url nel testo decodificato e corretto un bug su onResume

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,9 +38,12 @@
         android:layout_below="@+id/label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:scrollbars="vertical"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:textStyle="italic"/>
+        android:textStyle="italic"
+        android:maxHeight="90dp"
+        android:autoLink="web"/>
 
 
 </RelativeLayout>
