--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,8 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity" >
 
+
+    <item android:id="@+id/action_choose_file"
+        android:icon="@drawable/ic_action_search"
+        android:title="@string/action_choose_file"
+        android:showAsAction="always" />
     <item android:id="@+id/action_photo"
         android:icon="@drawable/ic_action_camera"
-        android:title="Photo"
+        android:title="@string/action_photo"
         android:showAsAction="always" />
 </menu>
